--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Run Jest tests
-        run: npm run test -- --ci --coverage
+        run: npx jest --verbose
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v5
