--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Pipeline CI/CD
+name: CI/CD
 
 on:
   push:
@@ -9,38 +9,54 @@ on:
       - main
 
 jobs:
-  test-and-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Fazer checkout do repositório
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: 20
 
-      - name: Instalar dependências
-        run: npm ci
+      - name: Install dependencies
+        run: npm install
 
-      - name: Executar testes Jest
-        run: npm test
+      - name: Run Jest tests
+        run: npm run test:unit
 
-      - name: Executar testes Cypress
-        uses: cypress-io/github-action@v6
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v4
         with:
-          start: npm start
+          start: npm run start
           wait-on: 'http://localhost:3000'
-          wait-on-timeout: 120
+          wait-on-timeout: 60
+          browser: chrome
 
-      - name: Implantar no Vercel
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: .
-          production: true
+          working-directory: ./
+          github-comment: true
