--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Pipeline CI/CD
 
 on:
   push:
@@ -9,54 +9,40 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  test-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Fazer checkout do repositório
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Instalar dependências
+        run: npm ci
 
-      - name: Run Jest tests
-        run: npm run test:unit
+      - name: Executar testes Jest
+        run: npm test -- --ci --maxWorkers=2
+        env:
+          CI: true
 
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v4
+      - name: Executar testes Cypress
+        uses: cypress-io/github-action@v6
         with:
-          start: npm run start
+          start: npm start
           wait-on: 'http://localhost:3000'
-          wait-on-timeout: 60
-          browser: chrome
+          wait-on-timeout: 120
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Deploy to Vercel
+      - name: Implantar no Vercel
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./
-          github-comment: true
+          working-directory: .
+          production: true
