--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,81 @@
-name: Pipeline CI/CD
+name: Test and Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  test-and-deploy:
+  # Job de testes com Jest
+  jest-tests:
+    name: Run Jest Tests
     runs-on: ubuntu-latest
 
     steps:
-      - name: Fazer checkout do repositório
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: 20
 
-      - name: Instalar dependências
+      - name: Install dependencies
         run: npm ci
 
-      - name: Executar testes Jest
-        run: npm test -- --ci --maxWorkers=2
-        env:
-          CI: true
+      - name: Run Jest tests
+        run: npm run test
 
-      - name: Executar testes Cypress
-        uses: cypress-io/github-action@v6
+  # Job de testes end-to-end com Cypress
+  cypress-tests:
+    name: Run Cypress Tests
+    runs-on: ubuntu-latest
+    needs: jest-tests
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          start: npm start
-          wait-on: 'http://localhost:3000'
-          wait-on-timeout: 120
+          node-version: 20
 
-      - name: Implantar no Vercel
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: amondnet/vercel-action@v25
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Start application
+        run: npm run dev &
+        env:
+          PORT: 3000
+
+      - name: Wait for server
+        uses: jakejarvis/wait-action@v0.1.4
+        with:
+          time: '10' # segundos para garantir que o Next.js subiu
+
+      - name: Run Cypress tests
+        run: npx cypress run
+
+  # Job de deploy para o Vercel
+  vercel-deploy:
+    name: Deploy to Vercel
+    runs-on: ubuntu-latest
+    needs: [jest-tests, cypress-tests]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: .
-          production: true
+          working-directory: ./
+          prod: true
