--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,75 +7,57 @@ on:
     branches: [ main ]
 
 jobs:
-  # Job de testes com Jest
   jest-tests:
     name: Run Jest Tests
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 20
+      - run: npm ci
+      - run: npm run test
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Jest tests
-        run: npm run test
-
-  # Job de testes end-to-end com Cypress
   cypress-tests:
     name: Run Cypress Tests
     runs-on: ubuntu-latest
     needs: jest-tests
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
+      - run: npm ci
+      - run: npm run build
       - name: Start application
-        run: npm run dev &
+        run: nohup npm start &
         env:
           PORT: 3000
-
       - name: Wait for server
         uses: jakejarvis/wait-action@v0.1.4
         with:
-          time: '10' # segundos para garantir que o Next.js subiu
+          time: '10'
+      - run: npx cypress run
 
-      - name: Run Cypress tests
-        run: npx cypress run
-
-  # Job de deploy para o Vercel
   vercel-deploy:
     name: Deploy to Vercel
     runs-on: ubuntu-latest
     needs: [jest-tests, cypress-tests]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm ci
-
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm run build
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
+        uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-args: '--prod'
           working-directory: ./
-          prod: true
