--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watchAll",
+    "test": "jest --ci --runInBand",
     "test:e2e": "cypress run",
     "lint": "eslint"
   },
